add messaging button on profile

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,7 +14,8 @@
   <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch:400,700" rel="stylesheet">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-  <script src="https://sdk.amazonaws.com/js/aws-sdk-2.262.1.min.js"></script>
+  <script src="SendBird.min.js"></script>
+  <script src="build/widget.SendBird.js"></script>
 
 
   <!--
